--- a/style.css
+++ b/style.css
@@ -1,97 +1,337 @@
+.module {
+    all: unset;
+  }
+
+a:hover{
+    text-decoration: none;
+}
+
+html{
+    font-family: 'Poppins', sans-serif;
+
+}
 body{
-  margin: 0;
-  text-align: center;
-  font-family: 'Merriweather', serif;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    background-color: aqua;
 }
-h1{
-  color: #66BFBF;
-  font-family: 'Sacramento', cursive;
-  margin: 50px auto 0 auto;
-  font-size: 5.625rem;
+
+
+.nav{
+    flex-grow: 1;
+    position: sticky;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    min-width: 350px;
+    height: 100vh;
+    /* background: linear-gradient(to bottom right, #4B79A1 0%, #283E51 100%); main color */
+    /* background: linear-gradient(to bottom right, #780206 , #061161); */
+    background: linear-gradient(to bottom right, #232526 , #414345);
+    /* background-color: linear-gradient(to bottom right, #4B79A1 0%, #283E51 100%); */
+    align-items: center;
+    justify-content: space-between;
+
+
 }
-h2{
-  font-size: 2rem;
-  color: #66BFBF;
-  font-family: 'Montserrat', sans-serif;
+
+.realBody{
+    flex-grow: 8;
+    display: flex;
+    max-width: 72vw;
+    background-color: white;
+    flex-direction: column;
+
 }
-h3{
-  color: #11999E;
-  font-family: 'Montserrat', sans-serif;
+
+
+/* Nav elements  */
+
+.circle{
+    margin: 7%;
+    display: flex;
+    height: 30vh;
+    width: 30vh;
+    border-radius: 50%;
+    border:10px solid white;
+
+    /* background-image: url("https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?cs=srgb&dl=face-facial-hair-fine-looking-guy-614810.jpg&fm=jpg"); */
+    background-image: url("profile.jpeg");
+    background-size: 120%;
+    background-repeat: no-repeat;
+
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.274), 0 6px 20px 0 rgba(0, 0, 0, 0.493);
 }
-hr{
- border-style: none;
- margin: 50px auto 50px auto;
- border-top-style: dotted;
- border-width: 7px;
- border-color: lightgrey;
- width: 5%;
+
+.menu{
+    display: flex;
+
+    background-color: white;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    min-width: 80%;
+    border-radius: 20px;
+    text-align: center;
+
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.274), 0 6px 20px 0 rgba(0, 0, 0, 0.493);
+    overflow: hidden;
 }
-.top-container{
-  position: relative;
-  padding-top: 90px;
-  background-color: #E4F9F5;
+
+.menu-items{
+    display: inline-block;
+    padding: 10px;
+    margin: 0;
+    font-weight: bold;
+
 }
-.skill-row{
-  width: 50%;
-  margin: 50px auto 100px auto;
-  text-align: left;
-  line-height: 2;
+
+.menu-items:hover{
+    background-color: rgb(206, 151, 40);
+    color: white;
 }
-.middle-container{
-  margin-top: 60px;
+.menu-items:active{
+    background-color: brown;
 }
-.basketball-img{
-  width: 25%;
-  float: right;
-  margin-bottom: 20px;
+
+.hire-me-button{
+    position: sticky;
+    top:10px;
+    background-color: rgb(206, 151, 40);
+    /* background: linear-gradient(to bottom right,#8A2387,#E94057,#F27121); */
+    /* background: linear-gradient(to bottom right,#159957,#155799); */
+    min-width: 80%;
+    padding: 15px;
+    border-radius: 50px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.274), 0 6px 20px 0 rgba(0, 0, 0, 0.493);
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    border: white solid;
+    border-width: 1px;
 }
-.android-img{
-  width: 25%;
-  float: left;
+
+.hire-me-button:hover{
+    background: white;
+    border-width: 1px;
+    color: rgb(206, 151, 40);
+    border: rgb(206, 151, 40) solid;
 }
-.bottom-container{
-  background-color: #66BFBF;
-  margin-top: 50px;
-  padding: 30px 0 15px 0;
+
+.socialIcons{
+    min-width: 80%;
+    padding: 15px;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+    background-color: white;
+
+    justify-content: space-around;
+    border-radius: 50px;
+
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.274), 0 6px 20px 0 rgba(0, 0, 0, 0.493);
+
 }
-.top-cloud{
-  position: absolute;
-  top: 50px;
-  right: 300px;
-  height: 90px;
-  width: 150px;
+
+.socialCircle{
+    width: 50px;
+    height:50px;
 }
-.bottom-cloud{
-  position: absolute;
-  left: 250px;
-  bottom: 280px;
-  height: 90px;
-  width: 150px;
+
+/* Real body element */
+
+.section{
+
+    /* position: sticky;
+    top: 0;
+    z-index: -1; */
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    padding: 30px;
+    /* background:  */
+
 }
-.profile{
-  margin-top: 20px;
+
+
+.section-1{
+    display: flex;
+
+
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.192), 0 6px 20px 0 rgba(0, 0, 0, 0.219); */
+
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    /* background-color: rgba(255, 255, 255, 0.89); */
+    background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.247),
+        rgba(0,0,0, 100)
+      ),url("https://images.pexels.com/photos/163100/circuit-circuit-board-resistor-computer-163100.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+
+    background-size: cover;
+
+
 }
-.subtitle{
-  color: #66BFBF;
-  margin-top: -20px;
+
+
+.container1-h1{
+    font-size: 50px;
+    color: black;
+    padding: 10px 25px;
+    background-color: white;
+    border-radius: 60px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.274), 0 6px 20px 0 rgba(0, 0, 0, 0.493);
+
 }
-.btn {
-	background-color:#66BFBF;
-	border-radius:10px;
-	border:2px solid #2aa2a6;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:20px;
-	padding:11px 17px;
-	text-decoration:none;
-	text-shadow:1px -1px 4px #3d768a;
+
+.container1-para{
+    padding: 20px;
+    color: rgb(255, 255, 255);
+    display: flex;
+    font-size: 22px;
+
 }
-.btn:hover {
-	background-color:#11999e;
+
+
+.section-2{
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background: linear-gradient(
+        to bottom,
+        rgba(0,0,0, 1),
+        rgba(0, 0, 0, 0.308),rgba(0,0,0, 1)
+      ),url("https://images.pexels.com/photos/1448561/pexels-photo-1448561.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+      background-size: cover;
 }
-.btn:active {
-	position:relative;
-	top:1px;
+
+.progress{
+    width: 100%;
 }
+
+.skill-container{
+    /* background-color: white; */
+    height: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    overflow: scroll;
+    justify-content: center;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    align-content: center;
+}
+
+
+
+.skill-container::-webkit-scrollbar {
+    display: none;
+}
+
+.skill-card{
+    /* display: flex; */
+    margin: 15px;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.863);
+    min-width: 220px;
+    width: 32%;
+    border-radius: 20px;
+    flex-direction: column;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.skill-card-img{
+
+    height: 20%;
+    flex-grow: 0;
+}
+
+.skill-card-content{
+    flex-grow: 2;
+}
+
+.section-3{
+    display: flex;
+
+
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.192), 0 6px 20px 0 rgba(0, 0, 0, 0.219); */
+
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background: linear-gradient(
+        to bottom,
+        rgb(0, 0, 0,0.1),
+        rgba(0, 0, 0)
+      ),url("appdev.jpg");
+
+    background-size: cover;
+
+}
+
+.section-3-container{
+    background-color: rgba(255, 255, 255, 0.856);
+    border-radius: 20px;
+    padding: 15px;
+    font-size: 18px;
+}
+
+@media screen and (max-width: 768px) {
+    body {
+      flex-direction: column;
+    }
+    .nav{
+        position: static;
+        flex: none;
+    }
+
+
+    .socialCircle{
+        width: 30px;
+        height:30px;
+    }
+
+
+    .realBody{
+        flex: none;
+
+        max-width: 100%;
+        max-height: 100%;
+        overflow: scroll;
+    }
+
+    .container1-para{
+        padding: 10px;
+        color: rgb(255, 255, 255);
+        display: flex;
+        font-size: 15px;
+
+    }
+
+    .section-3-container{
+
+        background-color: rgba(255, 255, 255, 0.856);
+        border-radius: 20px;
+        padding: 5px;
+    }
+
+
+    .section{
+        padding: 12px;
+    }
+
+    .container1-h1{
+        font-size: 30px;
+        padding: 8px 20px;
+    }
+
+  }
